@@ -6,7 +6,6 @@ Keyring Backend implementations
 
 from __future__ import with_statement
 
-import getpass
 import os
 import sys
 import base64
@@ -20,13 +19,6 @@ except ImportError:
     # Support Python 2.4, 2.5
     import StringIO as io
 
-try:
-    import configparser
-except ImportError:
-    # Support Python 2.4-2.7
-    import ConfigParser as configparser
-
-from keyring.util.escape import escape as escape_for_ini
 import keyring.util.escape
 from keyring.util import properties
 import keyring.util.platform
@@ -41,8 +33,6 @@ from .errors import PasswordSetError, InitError
 
 # use abstract base classes from the compat module
 abc = keyring.py25compat.abc
-# use json from the compat module
-json = keyring.py25compat.json
 
 class KeyringBackendMeta(abc.ABCMeta):
     """
@@ -135,265 +125,10 @@ from keyring.backends.OS_X import Keyring as OSXKeychain
 from keyring.backends.Gnome import Keyring as GnomeKeyring
 from keyring.backends.SecretService import Keyring as SecretServiceKeyring
 from keyring.backends.kwallet import Keyring as KDEKWallet
+from keyring.backends.file import BaseKeyring as BasicFileKeyring
+from keyring.backends.file import PlaintextKeyring as UncryptedFileKeyring
+from keyring.backends.file import EncryptedKeyring as CryptedFileKeyring
 
-class BasicFileKeyring(KeyringBackend):
-    """
-    BasicFileKeyring is a file-based implementation of keyring.
-
-    This keyring stores the password directly in the file and provides methods
-    which may be overridden by subclasses to support
-    encryption and decryption. The encrypted payload is stored in base64
-    format.
-    """
-
-    @properties.NonDataProperty
-    def file_path(self):
-        """
-        The path to the file where passwords are stored. This property
-        may be overridden by the subclass or at the instance level.
-        """
-        return os.path.join(keyring.util.platform.data_root(), self.filename)
-
-    @abc.abstractproperty
-    def filename(self):
-        """The filename used to store the passwords.
-        """
-        pass
-
-    @abc.abstractmethod
-    def encrypt(self, password):
-        """Encrypt the password.
-        """
-        pass
-
-    @abc.abstractmethod
-    def decrypt(self, password_encrypted):
-        """Decrypt the password.
-        """
-        pass
-
-    def get_password(self, service, username):
-        """Read the password from the file.
-        """
-        service = escape_for_ini(service)
-        username = escape_for_ini(username)
-
-        # load the passwords from the file
-        config = configparser.RawConfigParser()
-        if os.path.exists(self.file_path):
-            config.read(self.file_path)
-
-        # fetch the password
-        try:
-            password_base64 = config.get(service, username).encode()
-            # decode with base64
-            password_encrypted = base64.decodestring(password_base64)
-            # decrypted the password
-            password = self.decrypt(password_encrypted).decode('utf-8')
-        except (configparser.NoOptionError, configparser.NoSectionError):
-            password = None
-        return password
-
-    def set_password(self, service, username, password):
-        """Write the password in the file.
-        """
-        service = escape_for_ini(service)
-        username = escape_for_ini(username)
-
-        # encrypt the password
-        password_encrypted = self.encrypt(password.encode('utf-8'))
-        # encode with base64
-        password_base64 = base64.encodestring(password_encrypted).decode()
-
-        # ensure the file exists
-        self._ensure_file_path()
-
-        # load the keyring from the disk
-        config = configparser.RawConfigParser()
-        config.read(self.file_path)
-
-        # update the keyring with the password
-        if not config.has_section(service):
-            config.add_section(service)
-        config.set(service, username, password_base64)
-
-        # save the keyring back to the file
-        config_file = open(self.file_path, 'w')
-        try:
-            config.write(config_file)
-        finally:
-            config_file.close()
-
-    def _ensure_file_path(self):
-        """
-        Ensure the storage path exists.
-        If it doesn't, create it with "go-rwx" permissions.
-        """
-        storage_root = os.path.dirname(self.file_path)
-        if storage_root and not os.path.isdir(storage_root):
-            os.makedirs(storage_root)
-        if not os.path.isfile(self.file_path):
-            # create the file without group/world permissions
-            with open(self.file_path, 'w'):
-                pass
-            user_read_write = 0600
-            os.chmod(self.file_path, user_read_write)
-
-
-class UncryptedFileKeyring(BasicFileKeyring):
-    """Uncrypted File Keyring"""
-
-    filename = 'keyring_pass.cfg'
-
-    def encrypt(self, password):
-        """Directly return the password itself.
-        """
-        return password
-
-    def decrypt(self, password_encrypted):
-        """Directly return encrypted password.
-        """
-        return password_encrypted
-
-    def supported(self):
-        """Applicable for all platforms, but do not recommend.
-        """
-        return 0
-
-class CryptedFileKeyring(BasicFileKeyring):
-    """PyCrypto File Keyring"""
-
-    # a couple constants
-    block_size = 32
-    pad_char = '0'
-
-    filename = 'crypted_pass.cfg'
-
-    def supported(self):
-        """Applicable for all platforms, but not recommend"
-        """
-        try:
-            __import__('Crypto.Cipher.AES')
-            __import__('Crypto.Protocol.KDF')
-            __import__('Crypto.Random')
-            if not json:
-                raise AssertionError("JSON implementation needed (install "
-                    "simplejson)")
-            status = 0
-        except (ImportError, AssertionError):
-            status = -1
-        return status
-
-    @properties.NonDataProperty
-    def keyring_key(self):
-        # _unlock or _init_file will set the key or raise an exception
-        if self._check_file():
-            self._unlock()
-        else:
-            self._init_file()
-        return self.keyring_key
-
-    def _get_new_password(self):
-        while True:
-            password = getpass.getpass(
-                "Please set a password for your new keyring: ")
-            confirm = getpass.getpass('Please confirm the password: ')
-            if password != confirm:
-                sys.stderr.write("Error: Your passwords didn't match\n")
-                continue
-            if '' == password.strip():
-                # forbid the blank password
-                sys.stderr.write("Error: blank passwords aren't allowed.\n")
-                continue
-            return password
-
-    def _init_file(self):
-        """
-        Initialize a new password file and set the reference password.
-        """
-        self.keyring_key = self._get_new_password()
-        # set a reference password, used to check that the password provided
-        #  matches for subsequent checks.
-        self.set_password('keyring-setting', 'password reference',
-            'password reference value')
-
-    def _check_file(self):
-        """
-        Check if the file exists and has the expected password reference.
-        """
-        if not os.path.exists(self.file_path):
-            return False
-        self._migrate()
-        config = configparser.RawConfigParser()
-        config.read(self.file_path)
-        try:
-            config.get(
-                escape_for_ini('keyring-setting'),
-                escape_for_ini('password reference'),
-            )
-        except (configparser.NoSectionError, configparser.NoOptionError):
-            return False
-        return True
-
-    def _unlock(self):
-        """
-        Unlock this keyring by getting the password for the keyring from the
-        user.
-        """
-        self.keyring_key = getpass.getpass(
-            'Please enter password for encrypted keyring: ')
-        try:
-            ref_pw = self.get_password('keyring-setting', 'password reference')
-            assert ref_pw == 'password reference value'
-        except AssertionError:
-            self._lock()
-            raise ValueError("Incorrect Password")
-
-    def _lock(self):
-        """
-        Remove the keyring key from this instance.
-        """
-        del self.keyring_key
-
-    def _create_cipher(self, password, salt, IV):
-        """
-        Create the cipher object to encrypt or decrypt a payload.
-        """
-        from Crypto.Protocol.KDF import PBKDF2
-        from Crypto.Cipher import AES
-        pw = PBKDF2(password, salt, dkLen=self.block_size)
-        return AES.new(pw[:self.block_size], AES.MODE_CFB, IV)
-
-    def encrypt(self, password):
-        from Crypto.Random import get_random_bytes
-        salt = get_random_bytes(self.block_size)
-        from Crypto.Cipher import AES
-        IV = get_random_bytes(AES.block_size)
-        cipher = self._create_cipher(self.keyring_key, salt, IV)
-        password_encrypted = cipher.encrypt('pw:' + password)
-        # Serialize the salt, IV, and encrypted password in a secure format
-        data = dict(
-            salt=salt, IV=IV, password_encrypted=password_encrypted,
-        )
-        for key in data:
-            data[key] = data[key].encode('base64')
-        return json.dumps(data)
-
-    def decrypt(self, password_encrypted):
-        # unpack the encrypted payload
-        data = json.loads(password_encrypted)
-        for key in data:
-            data[key] = data[key].decode('base64')
-        cipher = self._create_cipher(self.keyring_key, data['salt'],
-            data['IV'])
-        plaintext = cipher.decrypt(data['password_encrypted'])
-        assert plaintext.startswith('pw:')
-        return plaintext[3:]
-
-    def _migrate(self, keyring_password=None):
-        """
-        Convert older keyrings to the current format.
-        """
 
 class Win32CryptoKeyring(BasicFileKeyring):
     """Win32 Cryptography Keyring"""
